crates/toride-mise/tests/snapshots/snapshots__command_spec_settings_ls.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 177
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "settings",
        "ls",
        "--output=json",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
    env_precedence: ExplicitWins,
    path_resolution: OsSearch,
    argv_policy: Allow,
    output_cap: OptIn,
}
