crates/toride-mise/tests/snapshots/snapshots__command_spec_uninstall.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 171
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "uninstall",
        "node@22.0.0",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
    env_precedence: ExplicitWins,
    path_resolution: OsSearch,
    argv_policy: Allow,
    output_cap: OptIn,
}
