crates/toride-mise/tests/snapshots/snapshots__command_spec_upgrade_all.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 147
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "upgrade",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
}
