crates/toride-mise/tests/snapshots/snapshots__command_spec_use.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 165
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "use",
        "--global",
        "node@22",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
    env_precedence: ExplicitWins,
    path_resolution: OsSearch,
    argv_policy: Allow,
    output_cap: OptIn,
}
