crates/toride-mise/tests/snapshots/snapshots__command_spec_version.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 183
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "--version",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
}
